--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <span class="badge bg-primary">HTML</span>
       <span class="badge bg-warning text-dark">CSS</span>
       <span class="badge bg-secondary">Static Website</span>
-      <a href="./Food Website/foodwebsite.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="https://poliprasanthi.github.io/Food-website/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
     </div>
   </div>
 </div>
@@ -215,7 +215,7 @@
       <span class="badge bg-info text-dark">Font Awesome</span>
       <span class="badge bg-secondary">Static Website</span>
       <span class="badge bg-dark">UI Clone</span>
-      <a href="./Youtube/youtube.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="https://poliprasanthi.github.io/youtube_Clone/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -237,7 +237,7 @@
       <span class="badge bg-warning text-dark">CSS</span>
       <span class="badge bg-secondary">Static Website</span>
       <span class="badge bg-dark">Travel Theme</span>
-      <a href="./travel_webpage/travel.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="https://poliprasanthi.github.io/Travel_Webpage/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -284,7 +284,7 @@
       <span class="badge bg-success">JavaScript</span>
       <span class="badge bg-info text-dark">Responsive</span>
       <span class="badge bg-dark">UI/UX</span>
-      <a href="./jsProject/jsFiles/login.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="https://poliprasanthi.github.io/E-commers-Website/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -481,3 +481,4 @@
   </footer>
 </body>
 </html>
+
