--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <span class="badge bg-success">JavaScript</span>
       <span class="badge bg-dark">UI/UX</span>
       <span class="badge bg-info text-dark">Responsive</span>
-      <a href="./Java Script/calculator.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="https://poliprasanthi.github.io/Calculator/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -481,4 +481,5 @@
   </footer>
 </body>
 </html>
+
 
