--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <a href="./prasanthi resume new.pdf" class="btn btn-outline-dark btn-lg" target="_blank">
+      <a href="./prasanthiresume.pdf" class="btn btn-outline-dark btn-lg" target="_blank">
         <i class="bi bi-download me-2"></i>Download Resume
       </a>
     </div>
@@ -449,6 +449,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
