--- a/index.html
+++ b/index.html
@@ -447,8 +447,10 @@
   <footer class="bg-dark text-white text-center py-3">
     &copy; 2025 P.Prasanthi. All Rights Reserved.
   </footer>
+  <script src="./portofilo.js"></script>
 </body>
 </html>
+
 
 
 
