--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <span class="badge bg-primary">HTML</span>
       <span class="badge bg-warning text-dark">CSS</span>
       <span class="badge bg-secondary">Static Website</span>
-      <a href="https://poliprasanthi.github.io/Food-website/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="./Food Website/foodwebsite.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
     </div>
   </div>
 </div>
@@ -215,7 +215,7 @@
       <span class="badge bg-info text-dark">Font Awesome</span>
       <span class="badge bg-secondary">Static Website</span>
       <span class="badge bg-dark">UI Clone</span>
-      <a href="https://poliprasanthi.github.io/youtube_Clone/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="./Youtube/youtube.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -237,7 +237,7 @@
       <span class="badge bg-warning text-dark">CSS</span>
       <span class="badge bg-secondary">Static Website</span>
       <span class="badge bg-dark">Travel Theme</span>
-      <a href="https://poliprasanthi.github.io/Travel_Webpage/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="./travel_webpage/travel.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -260,7 +260,7 @@
       <span class="badge bg-success">JavaScript</span>
       <span class="badge bg-dark">UI/UX</span>
       <span class="badge bg-info text-dark">Responsive</span>
-      <a href="https://poliprasanthi.github.io/Calculator/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="./Java Script/calculator.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -284,7 +284,7 @@
       <span class="badge bg-success">JavaScript</span>
       <span class="badge bg-info text-dark">Responsive</span>
       <span class="badge bg-dark">UI/UX</span>
-      <a href="https://poliprasanthi.github.io/E-commers-Website/" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+      <a href="./jsProject/jsFiles/login.html" target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
 
     </div>
   </div>
@@ -395,6 +395,38 @@
             <span class="badge bg-secondary">Internship</span>
         </div>
       </div>
+
+    <div class="card mb-4 shadow-sm border-start border-4 border-success">
+      <div class="card-body">
+        <h4 class="card-title">Java Full Stack Trainee – QSpiders Training Institute</h4>
+        <h6 class="text-muted">March 2025 – Present</h6>
+        <p class="card-text">
+          • Selected through a free incubation program and received rigorous training in Java, Spring Boot, HTML, CSS, and SQL.<br>
+          • Developed full-stack applications as part of capstone projects with guidance from senior mentors.<br>
+          • Improved backend performance and wrote clean, scalable code adhering to industry standards.
+        </p>
+        <span class="badge bg-primary">Java</span>
+        <span class="badge bg-warning text-dark">Web Technologies</span>
+        <span class="badge bg-dark">SQL</span>
+      </div>
+    </div>
+    <div class="card mb-4 shadow-sm border-start border-4 border-danger">
+      <div class="card-body">
+        <h4 class="card-title">Project Contributor – Intelligent IoT-Enabled Poultry Farm System</h4>
+        <h6 class="text-muted">Jan 2025 – Apr 2025</h6>
+        <p class="card-text">
+          • Developed a smart poultry farm system integrating sensors and Arduino controllers.<br>
+          • Collaborated with software and hardware teams to implement automation using CNN and CatBoost models.<br>
+          • Enabled real-time environmental monitoring and intelligent decision-making for poultry management.
+        </p>
+        <span class="badge bg-success">IoT</span>
+        <span class="badge bg-dark">Arduino</span>
+        <span class="badge bg-primary">CNN</span>
+        <span class="badge bg-warning text-dark">CatBoost</span>
+      </div>
+    </div>
+
+
   </div>
 </section>
 <section id="contact" class="bg-light py-5">
@@ -438,9 +470,10 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <a href="./prasanthiATS.pdf" class="btn btn-outline-dark btn-lg" target="_blank" download="Prasanthi">
+      <a href="./prasanthi resume new.pdf" class="btn btn-outline-dark btn-lg" target="_blank" download="prashanthi">
         <i class="bi bi-download me-2"></i>Download Resume
       </a>
+      <a href="./data.html" style="text-decoration-line: none; color: black;"><button style="color: 100px; background-color: aqua;border-radius: 10px; size: 50px;">View Messages</button></a>
     </div>
   </div>
 </section>
@@ -450,11 +483,3 @@
   <script src="./portofilo.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
