--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <a href="./prasanthiATS.pdf" class="btn btn-outline-dark btn-lg" target="_blank" download="prashanthi">
+      <a href="./prasanthiATS(1).pdf" class="btn btn-outline-dark btn-lg" target="_blank" download="prashanthi">
         <i class="bi bi-download me-2"></i>Download Resume
       </a>
       <a href="./data.html" style="text-decoration-line: none; color: black;"><button style="color: 100px; background-color: aqua;border-radius: 10px; size: 50px;">View Messages</button></a>
@@ -483,5 +483,6 @@
   <script src="./portofilo.js"></script>
 </body>
 </html>
+
 
 
