--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <span class="badge bg-warning text-dark">CSS</span>
       <span class="badge bg-success">JavaScript</span>
       <span class="badge bg-dark">UI/UX</span>
-      <a href="" class="btn btn-sm btn-outline-primary mt-2">Live Demo</a>
+      <a href=" https://poliprasanthi.github.io/clock-website/" class="btn btn-sm btn-outline-primary mt-2">Live Demo</a>
     </div>
   </div>
 </div>
@@ -609,3 +609,4 @@
 
 </body>
 </html>
+
