--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <span class="badge bg-warning text-dark">CSS</span>
             <span class="badge bg-secondary">Static Website</span>
             <span class="badge bg-dark">Travel Theme</span>
-            <a href="https://poliprasanthi.github.io/Travel_Webpage/ target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
+            <a href="https://poliprasanthi.github.io/Travel_Webpage/" "target="_blank" class="btn btn-sm btn-outline-primary">Live Demo</a>
           </div>
         </div>
       </div>
@@ -609,4 +609,5 @@
 
 </body>
 </html>
+
 
