--- a/index.html
+++ b/index.html
@@ -136,6 +136,77 @@
     </div>
   </div>
 </section>
+  <section id="skills" class="section" style="background-color:#f8f9fa; padding:40px 0;">
+    <div class="container">
+        <h2 class="section-title" style="text-align:center; margin-bottom:30px; color:#333;">My Skills</h2>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="skill-item" style="margin-bottom:20px;">
+                    <div class="d-flex justify-content-between" style="margin-bottom:5px;">
+                        <h5 style="margin:0;">HTML</h5>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress" style="background:#e9ecef; border-radius:5px; height:10px;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width:95%; background-color:#ff5722; border-radius:5px;" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item" style="margin-bottom:20px;">
+                    <div class="d-flex justify-content-between" style="margin-bottom:5px;">
+                        <h5 style="margin:0;">CSS</h5>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress" style="background:#e9ecef; border-radius:5px; height:10px;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width:90%; background-color:#2196f3; border-radius:5px;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item" style="margin-bottom:20px;">
+                    <div class="d-flex justify-content-between" style="margin-bottom:5px;">
+                        <h5 style="margin:0;">JavaScript</h5>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress" style="background:#e9ecef; border-radius:5px; height:10px;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width:85%; background-color:#ffb300; border-radius:5px;" aria-valuenow="85"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="skill-item" style="margin-bottom:20px;">
+                    <div class="d-flex justify-content-between" style="margin-bottom:5px;">
+                        <h5 style="margin:0;">Core Java</h5>
+                        <span>85%</span>
+                    </div>
+                    <div class="progress" style="background:#e9ecef; border-radius:5px; height:10px;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width:88%; background-color:#4caf50; border-radius:5px;" aria-valuenow="88"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item" style="margin-bottom:20px;">
+                    <div class="d-flex justify-content-between" style="margin-bottom:5px;">
+                        <h5 style="margin:0;">SQL</h5>
+                        <span>90%</span>
+                    </div>
+                    <div class="progress" style="background:#e9ecef; border-radius:5px; height:10px;">
+                        <div class="progress-bar" role="progressbar"
+                            style="width:93%; background-color:#9c27b0; border-radius:5px;" aria-valuenow="93"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="projects" class="bg-light py-5">
   <div class="container">
     <h2 class="text-center mb-4">Projects</h2>
@@ -609,5 +680,6 @@
 
 </body>
 </html>
+
 
 
