--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       <span class="badge bg-success">Java</span>
       <span class="badge bg-primary">Console Application</span>
       <span class="badge bg-warning text-dark">Bus Ticketing</span>
-      <a href="./BusTicketBokking1.pdf" target="_blank" class="btn btn-sm btn-outline-primary mt-2">View Code</a>
+      <a href="./BusTicketBooking1.pdf" target="_blank" class="btn btn-sm btn-outline-primary mt-2">View Code</a>
     </div>
   </div>
 </div>
@@ -678,6 +678,7 @@
 
 </body>
 </html>
+
 
 
 
